bug fixed (dark mode intro)

--- a/src/style.css
+++ b/src/style.css
@@ -120,6 +120,7 @@ body {
   --background: #1e1e1e;
   --bg: #181818;
   --text: whitesmoke;
+  --secondary: #303030;
 }
 /* LIGHT MODE END */
 
